# java_lsp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: build_tool.rs  class_stub.rs  classfile.rs  completion.rs  documents.rs  external_index.rs  goto_definition.rs  gradle.rs  handshake.rs  hover.rs  jar.rs  javac_compile.rs  javac_fallback.rs  jdk_home.rs  jsonrpc.rs  lib.rs  lombok.rs  main.rs  maven.rs  member_reference.rs  project_model.rs  server.rs  symbol.rs  syntax.rs  test_support.rs  text_position.rs  transport.rs  workspace_index.rs  workspace_scan.rs
testbed/: NOTES.md  build.gradle
testbed/src/main/java/dev/javalsp/testbed/: GreetingLog.java  Main.java  Person.java
testbed/src/main/java/dev/javalsp/testbed/util/: Greeter.java
tests/: diagnostics.rs  handshake.rs  local_index.rs
tests/common/: mod.rs
tests/fixtures/gradle_sample/: settings.gradle
tests/fixtures/gradle_sample/app/: build.gradle
tests/fixtures/gradle_sample/app/src/main/java/com/example/app/: App.java  Widget.java
tests/fixtures/lombok_sample/: .project  build.gradle  settings.gradle
tests/fixtures/lombok_sample/src/main/java/com/example/lombok/: Widget.java
tests/fixtures/maven_sample/: pom.xml
tests/fixtures/maven_sample/app/: pom.xml
tests/fixtures/maven_sample/lib/: pom.xml
tests/fixtures/maven_sample/lib/src/main/java/com/example/lib/: Greeter.java
tests/fixtures/no_build_tool_sample/src/main/java/dev/javalsp/nobuild/: Main.java
