[package]
name = "java-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
lsp-types = "0.97.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt"] }
tree-sitter = "0.26.10"
tree-sitter-java = "0.23.5"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
